// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown level2 renders correctly with default values 1`] = `
<li
  className="wds-dropdown-level-2"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="wds-dropdown-level-2__toggle"
    onClick={[Function]}
    role="button"
  >
    <span>
      Toggle
    </span>
    <div
      className="wds-icon wds-icon-tiny wds-dropdown-chevron"
    />
  </div>
  <div
    className="wds-dropdown__content wds-is-not-scrollable wds-dropdown-level-2__content"
  />
</li>
`;

exports[`Dropdown level2 renders correctly with href set 1`] = `
<li
  className="wds-dropdown-level-2"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="wds-dropdown-level-2__toggle"
    onClick={[Function]}
    role="button"
  >
    <span>
      Toggle
    </span>
    <div
      className="wds-icon wds-icon-tiny wds-dropdown-chevron"
    />
  </div>
  <div
    className="wds-dropdown__content wds-is-not-scrollable wds-dropdown-level-2__content"
  />
</li>
`;

exports[`Dropdown level2 renders correctly with isActive set 1`] = `
<li
  className="wds-is-active wds-dropdown-level-2"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="wds-dropdown-level-2__toggle"
    onClick={[Function]}
    role="button"
  >
    <span>
      Toggle
    </span>
    <div
      className="wds-icon wds-icon-tiny wds-dropdown-chevron"
    />
  </div>
  <div
    className="wds-dropdown__content wds-is-not-scrollable wds-dropdown-level-2__content"
  />
</li>
`;

exports[`Dropdown level2 renders correctly with isStickedToParent set 1`] = `
<li
  className="wds-dropdown-level-2 wds-is-sticked-to-parent"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="wds-dropdown-level-2__toggle"
    onClick={[Function]}
    role="button"
  >
    <span>
      Toggle
    </span>
    <div
      className="wds-icon wds-icon-tiny wds-dropdown-chevron"
    />
  </div>
  <div
    className="wds-dropdown__content wds-is-not-scrollable wds-dropdown-level-2__content"
  />
</li>
`;

exports[`Dropdown renders correctly with DropdownToggle and children 1`] = `
<div
  className="wds-dropdown"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="wds-dropdown__toggle"
    onClick={[Function]}
    role="button"
  >
    <span>
      Toggle
    </span>
    <div
      className="wds-icon wds-icon-tiny wds-dropdown__toggle-chevron"
    />
  </div>
  <div
    className="wds-dropdown__content wds-is-not-scrollable"
  >
    <div>
      Content
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with DropdownToggle, toggleIconName and children 1`] = `
<div
  className="wds-dropdown"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="wds-dropdown__toggle"
    onClick={[Function]}
    role="button"
  >
    <span>
      Toggle
    </span>
    <div
      className="wds-icon wds-icon-tiny wds-dropdown__toggle-chevron"
    />
  </div>
  <div
    className="wds-dropdown__content wds-is-not-scrollable"
  >
    <div>
      Content
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with default values 1`] = `
<div
  className="wds-dropdown"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="wds-dropdown__toggle"
    onClick={[Function]}
    role="button"
  >
    <span>
      Toggle
    </span>
    <div
      className="wds-icon wds-icon-tiny wds-dropdown__toggle-chevron"
    />
  </div>
  <div
    className="wds-dropdown__content wds-is-not-scrollable"
  />
</div>
`;
